--- a/datafundament_fb/locations/templates/locations/location-list.html
+++ b/datafundament_fb/locations/templates/locations/location-list.html
@@ -14,7 +14,7 @@
         <ul class="data-list">
             {% for object in object_list %}
             <li>
-                <a href="{% url 'location-detail' object.pandcode %}">
+                <a href="{% url 'locations_urls:location-detail' object.pandcode %}">
                     <span class="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" focusable="false">
                             <path fill-rule="evenodd" d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"></path>
@@ -32,7 +32,7 @@
         <div class="btn-container">
             <a href="export" class="btn btn-primair">Exporteren</a>
             {% if user.is_authenticated %}
-            <a href="{% url 'location-create' %}" class="btn btn-secundair">Aanmaken</a>
+            <a href="{% url 'locations_urls:location-create' %}" class="btn btn-secundair">Aanmaken</a>
             {% endif %}
         </div>
     </div>
