--- a/datafundament_fb/templates/admin/admin_base.html
+++ b/datafundament_fb/templates/admin/admin_base.html
@@ -34,11 +34,12 @@
     <li><a href="{% url 'admin:login' %}?next={{ request.path }}">Inloggen</a></li>
     {% endif %}
     {% if user.is_authenticated %}
+    <li><a href="{% url 'help_docs_urls:documentation-list' %}">Help</a></li>
     <li><a href="{% url 'location-admin' %}">Beheer</a></li>
     <li><form id="logout-form" method="post" action="{% url 'admin:logout' %}">
-      {% csrf_token %}
-      <button type="submit">Uitloggen</button>
-    </form></li>
+        {% csrf_token %}
+        <button type="submit">Uitloggen</button>
+      </form></li>
     {% endif %}
   </ul>
 </nav>
