--- a/datafundament_fb/locations/templates/locations/location-create.html
+++ b/datafundament_fb/locations/templates/locations/location-create.html
@@ -30,17 +30,23 @@
         </div>
         {% for field in form %}
         <div class="data-view-row">
-            <div class="data-label"><label for="{{ field.auto_id }}">{{ field.label }}</label></div>
+            <div class="data-label">
+                <label for="{{ field.auto_id }}">{{ field.label }}</label>
+                {% if field.field.required %}<span class="required-field">*</span>{% endif %}
+            </div>
             <div class="data-value">
                 {{ field }}
                 {{ field.errors }}
             </div>
         </div>
         {% endfor %}
-        <div class="btn-container">
-            <button class="btn btn-primair" type="submit" name="_save" value="Save" formaction="{% url 'locations_urls:location-create' %}">Aanmaken</button>
-            <a href="{% url 'locations_urls:location-list' %}" class="btn btn-secundair">Annuleren</a>
-        </div>
+    </div>
+    <div>
+        Velden met (*) moeten een waarde hebben.
+    </div>
+    <div class="btn-container">
+        <button class="btn btn-primair" type="submit" name="_save" value="Save" formaction="{% url 'locations_urls:location-create' %}">Aanmaken</button>
+        <a href="{% url 'locations_urls:location-list' %}" class="btn btn-secundair">Annuleren</a>
     </div>
 </form>
 {% endblock %}
