--- a/datafundament_fb/locations/templates/locations/location-update.html
+++ b/datafundament_fb/locations/templates/locations/location-update.html
@@ -36,13 +36,19 @@
         </div>
         {% for field in form %}
         <div class="data-view-row">
-            <div class="data-label"><label for="{{ field.auto_id }}">{{ field.label }}</label></div>
+            <div class="data-label">
+                <label for="{{ field.auto_id }}">{{ field.label }}</label>
+                {% if field.field.required %}<span class="required-field">*</span>{% endif %}
+            </div>
             <div class="data-value">
                 {{ field }}
                 {{ field.errors }}
             </div>
         </div>
         {% endfor %}
+    </div>
+    <div>
+        Velden met (*) moeten een waarde hebben.
     </div>
     <div class="btn-container">
         <button class="btn btn-primair" type="submit" name="_save" value="Save" formaction="{% url 'locations_urls:location-update' location_data.pandcode %}">Opslaan</button>
