--- a/datafundament_fb/locations/templates/locations/location-admin.html
+++ b/datafundament_fb/locations/templates/locations/location-admin.html
@@ -22,6 +22,7 @@
             </span>
             Locaties
         </a>
+        | Overzicht van alle locaties en het toevoegen, wijzigen van bestaande.
     </li>
     <li>
         <a href="{% url 'admin:locations_locationproperty_changelist' %}">
@@ -32,6 +33,7 @@
             </span>
             Locaties eigenschappen
         </a>
+        | Voor het toevoegen, wijzigen van de locatie eigenschappen.
     </li>
     <li>
         <a href="{% url 'admin:locations_externalservice_changelist' %}">
@@ -42,6 +44,7 @@
             </span>
             Externe koppelingen
         </a>
+        | Voor het toevoegen, wijzigen van externe gegevensbronnen.
     </li>
     <li>
         <a href="{% url 'locations_urls:location-import' %}">
@@ -52,6 +55,7 @@
             </span>
             Data importeren
         </a>
+        | Voor het importeren van nieuwe en gewijzigde locaties middels een CSV bestand. 
     </li>
     <li>
         <a href="{% url 'locations_urls:location-export' %}">
@@ -62,6 +66,7 @@
             </span>
             Data exporteren
         </a>
+        | Voor het exporteren van de locaties naar een CSV bestand.
     </li>
 </ul>
 {% endblock %}
