Feature/Documentatie handleiding (#37)
* added help_docs app

* updated location app with namespace urls

* changed help url

* added asterisk to required fields in forms

* Hardcoded Home name in templates

* added some info to location admin template

* help_docs sorting and fixture

* fixed test

* Fixed Home name in documentation templates

* removed asterisk explanation from template

* fix indentation

* update test for help_docs

--- a/datafundament_fb/help_docs/templates/help_docs/documentation-detail.html
+++ b/datafundament_fb/help_docs/templates/help_docs/documentation-detail.html
@@ -1,9 +1,6 @@
 {% extends 'admin/admin_base.html' %}
 {% load i18n admin_urls static admin_modify %}
 
-{% block extrastyle %}{{ block.super }}
-<link rel="stylesheet" href="{% static 'admin/css/forms.css' %}">{% endblock %}
-
 {% block breadcrumbs %}
 <div class="breadcrumbs">
     <a href="{% url 'locations_urls:location-list' %}">Home</a>
@@ -12,7 +9,7 @@
     <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
     {% endif %}
     <span>&rsaquo;</span>
-    {% translate 'Export Locaties' %}
+    {{ location_data.naam }}
 </div>
 {% endblock %}
 
@@ -25,16 +22,10 @@
 {% endif %}
 
 {% block content %}
-<h2>Exporteer Locaties naar CSV</h2>
-<p>
-    Start een de download van een CSV met alle (actieve) locaties<br>
-</p>
-<form action="." method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    <div class="btn-container">
-        <button class="default" type="submit" name="_save" value="Download CSV"
-            formaction="{% url 'locations_urls:location-export' %}">Download export</button>
-    </div>
-</form>
+<div>
+<h2>{{ object.title }}</h2>
+<p>{{ object.body|linebreaks }}</p>
+</div>
+<br />
 
 {% endblock %}
