--- a/datafundament_fb/locations/templates/locations/location-create.html
+++ b/datafundament_fb/locations/templates/locations/location-create.html
@@ -3,7 +3,7 @@
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-    <a href="{% url 'location-list' %}">{% translate 'Home' %}</a>
+    <a href="{% url 'locations_urls:location-list' %}">Home</a>
     <span>&rsaquo;</span>
     <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
     <span>&rsaquo;</span>
@@ -30,17 +30,20 @@
         </div>
         {% for field in form %}
         <div class="data-view-row">
-            <div class="data-label"><label for="{{ field.auto_id }}">{{ field.label }}</label></div>
+            <div class="data-label">
+                <label for="{{ field.auto_id }}">{{ field.label }}</label>
+                {% if field.field.required %}<span class="required-field">*</span>{% endif %}
+            </div>
             <div class="data-value">
                 {{ field }}
                 {{ field.errors }}
             </div>
         </div>
         {% endfor %}
-        <div class="btn-container">
-            <button class="btn btn-primair" type="submit" name="_save" value="Save" formaction="{% url 'location-create' %}">Aanmaken</button>
-            <a href="{% url 'location-list' %}" class="btn btn-secundair">Annuleren</a>
-        </div>
+    </div>
+    <div class="btn-container">
+        <button class="btn btn-primair" type="submit" name="_save" value="Save" formaction="{% url 'locations_urls:location-create' %}">Aanmaken</button>
+        <a href="{% url 'locations_urls:location-list' %}" class="btn btn-secundair">Annuleren</a>
     </div>
 </form>
 {% endblock %}
