--- a/datafundament_fb/templates/admin/admin_base.html
+++ b/datafundament_fb/templates/admin/admin_base.html
@@ -34,6 +34,7 @@
     <li><a href="{% url 'admin:login' %}?next={{ request.path }}">Inloggen</a></li>
     {% endif %}
     {% if user.is_authenticated %}
+    <li><a href="{% url 'help_docs_urls:documentation-list' %}">Help</a></li>
     <li><a href="{% url 'location-admin' %}">Beheer</a></li>
     <li><form id="logout-form" method="post" action="{% url 'admin:logout' %}">
       {% csrf_token %}
