--- a/datafundament_fb/locations/templates/locations/location-detail.html
+++ b/datafundament_fb/locations/templates/locations/location-detail.html
@@ -1,5 +1,5 @@
 {% extends 'admin/admin_base.html' %}
-{% load i18n admin_urls static admin_modify %}
+{% load i18n admin_urls static admin_modify utils %}
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
@@ -41,7 +41,15 @@
     {% for field in form %}
     <div class="data-view-row">
         <dt class="data-label">{{ field.label }}</dt>
-        <dd class="data-value">{% if field.value %}{{ field.value }}{% endif %}</dd>
+        <dd class="data-value">
+            {% if field.value %}
+                {% if field.value|get_type == 'list' %}
+                    {{ field.value|join:", " }}
+                {% else %}
+                    {{ field.value }}
+                {% endif %}
+            {% endif %}
+        </dd>
     </div>
     {% endfor %}
 </dl>
