--- a/datafundament_fb/locations/templates/locations/location-detail.html
+++ b/datafundament_fb/locations/templates/locations/location-detail.html
@@ -34,22 +34,32 @@
 </small>
 
 <dl class="data-view">
+    {% regroup form by field.group as group_list %}
+    {% for group in group_list %}
+    <div class="group">
+    {% if group.grouper %}<h3>{{ group.grouper }}</h3>{% endif %}
+    {% if not group.grouper %} <!-- Add this to the first group with no name -->
     <div class="data-view-row">
         <dt class="data-label">Pandcode</dt>
         <dd class="data-value">{{ location_data.pandcode }}</dd>
     </div>
-    {% for field in form %}
-    <div class="data-view-row">
-        <dt class="data-label">{{ field.label }}</dt>
-        <dd class="data-value">
-            {% if field.value %}
-                {% if field.value|get_type == 'list' %}
-                    {{ field.value|join:", " }}
+    {% endif %}
+        {% for field in group.list %}
+        <div class="data-view-row">
+            <dt class="data-label">{{ field.label }}</dt>
+            <dd class="data-value">
+                {% if field.value %}
+                    {% if field.value|get_type == 'list' %}
+                        {{ field.value|join:", " }}
+                    {% else %}
+                        {{ field.value }}
+                    {% endif %}
                 {% else %}
-                    {{ field.value }}
+                -
                 {% endif %}
-            {% endif %}
-        </dd>
+            </dd>
+        </div>
+        {% endfor %}
     </div>
     {% endfor %}
 </dl>
