--- a/datafundament_fb/locations/static/css/ggd_base.css
+++ b/datafundament_fb/locations/static/css/ggd_base.css
@@ -64,7 +64,9 @@ html[data-theme="light"] {
   --color-red: #EC0000;
   --color-green: #00A03C;
   --color-yellow: #FFE600;
+  --color-greyDark: #323232;
   --color-grey: #b4b4b4;
+  --color-greyLight: #f5f5f5;
   --color-white: #ffffff;
   --color-black: #000000;
   --font-family-primary: "amsterdam sans", "Segoe UI", system-ui, Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -88,26 +90,28 @@ BODY {
 
 /*******************************************/
 
-H1, H2, H3, H4, H5, H6 {
+H1, H2, H3, H4, H5, H6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: "amsterdam sans"; /* heavy */
   font-weight: 700;
   color: var(--body-loud-color);
 }
 
-H1 {
+H1, .h1 {
   font-size: 2rem;
   margin-bottom: 1rem;
 }
-H2 {
+H2, .h2 {
   font-size: 1.5rem;
   margin-top: 0;
   margin-bottom: 1rem;
 }
-H3 { font-size: 1.25rem; }
-H4 { font-size: 1.125rem; }
-H5 { font-size: 1rem; }
+H3, .h3 { font-size: 1.25rem; margin-bottom: 0.5rem; }
+H4, .h4 { font-size: 1.125rem;  margin-bottom: 0.5rem; }
+H5, .h5 { font-size: 1rem; }
 
 /*******************************************/
+
 * + h2 {
   margin-top: 1rem;
 }
@@ -157,4 +161,41 @@ button {
   font-style: normal;
   font-weight: 400;
   font-size: 1rem;
+}
+
+
+/*******************************************/
+
+table.table-adam {
+  width: 100%;
+  border-spacing: 0px;
+  overflow: auto;
+}
+
+table.table-adam tr:nth-child(even) { background-color: var(--color-white); }
+table.table-adam tr:nth-child(odd) { background-color: var(--color-white); }
+
+table.table-adam thead th {
+  border-top: 0;
+  border-bottom: 1px solid rgb(230, 230, 230);
+  white-space: nowrap;
+  font-size: 1rem;
+  font-weight: 700;
+  margin: 0px;
+  padding: 8px;
+  position: relative;
+  text-align: left;
+  text-transform: none;
+  background: none;
+  color: var(--color-black);
+}
+
+table.table-adam tbody td {
+  border-bottom: 1px solid rgb(230, 230, 230);
+  white-space: nowrap;
+  font-size: 1rem;
+  margin: 0px;
+  padding: 8px;
+  position: relative;
+  text-align: left;
 }
