--- a/datafundament_fb/locations/static/css/ggd_components.css
+++ b/datafundament_fb/locations/static/css/ggd_components.css
@@ -104,3 +104,59 @@ input[type=number] {
 .alert p:last-child {
   margin: 0;
 }
+
+
+/********** PAGINATION **********/
+
+.ams-pagination__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  color: var(--color-blue);
+  list-style-type: none;
+  margin-block: 0;
+  padding-inline-start: 0;
+}
+
+div.ams-pagination__button,
+a.ams-pagination__button {
+  all: unset;
+  box-sizing: border-box;
+  outline: revert;
+  -webkit-text-size-adjust: 100%;
+  cursor: pointer;
+  display: flex;
+  gap: 0.5rem;
+  outline-offset: 2px;
+  padding-inline: 0.5rem;
+  text-decoration-line: none;
+  text-decoration-thickness: 0.125rem;
+  text-underline-offset: 0.375rem;
+  touch-action: manipulation;
+}
+
+.ams-pagination__button:hover {
+  color: var(--color-dark-blue);
+  text-decoration-line: underline;
+}
+
+div.ams-pagination__button--current {
+  cursor: default;
+  font-weight: 700;
+}
+
+.ams-pagination__button .icon {
+  display: inline-flex;
+  align-items: center;
+}
+
+.ams-pagination__button .icon:after {
+  content: ".";
+  visibility: hidden;
+  width: 0;
+}
+
+.ams-pagination__button .icon svg {
+  width: 0.625rem;
+  fill: var(--color-blue)
+}
