--- a/datafundament_fb/locations/templates/locations/location-list.html
+++ b/datafundament_fb/locations/templates/locations/location-list.html
@@ -54,10 +54,15 @@
         {% endfor %}
         </tbody>
     </table>
-    <div class="h5">{{ object_list|length }} locaties gevonden</div>
+
+    {% if is_paginated %}
+        {% include "includes/pagination.html" %}
+    {% endif %}
+
+    <div class="h5">{{ page_obj.paginator.count }} {% if is_filtered_result %}van de {{ location_count }} {% endif %}locaties gevonden ({{ object_list|length }} getoond)</div>
 
     <div class="btn-container">
-        <a href="{% url 'locations_urls:location-export' %}?={{ export_query }}" class="btn btn-primair">Exporteren</a>
+        <a href="{% url 'locations_urls:location-export' %}?{{ query }}" class="btn btn-primair">Exporteren</a>
         {% if user.is_authenticated %}
         <a href="{% url 'locations_urls:location-create' %}" class="btn btn-secundair">Aanmaken</a>
         {% endif %}
