--- a/datafundament_fb/locations/templates/locations/location-admin.html
+++ b/datafundament_fb/locations/templates/locations/location-admin.html
@@ -79,5 +79,16 @@
         </a>
         | Voor het exporteren van de locaties naar een CSV bestand.
     </li>
+    <li>
+        <a href="{% url 'location-log' %}">
+            <span class="icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" focusable="false">
+                    <path fill-rule="evenodd" d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"></path>
+                </svg>
+            </span>
+            Logs
+        </a>
+        | Voor het bekijken van locatie en applicatie wijzigingen.
+    </li>
 </ul>
 {% endblock %}
