meerdere kleine fixes

--- a/datafundament_fb/locations/templates/locations/location-log.html
+++ b/datafundament_fb/locations/templates/locations/location-log.html
@@ -28,6 +28,7 @@
         <thead>
             <tr>
                 <th scope="col" class="column-pancode">Datum/tijd</th>
+                <th scope="col">Door</th>
                 <th scope="col">Onderdeel</th>
                 <th scope="col">Log bericht</th>
             </tr>
@@ -37,6 +38,9 @@
             <tr>
                 <td>
                     {{object.timestamp}}
+                </td>
+                <td>
+                    {{ object.user }}
                 </td>
                 <td>
                     {{ object.target }}
