--- a/datafundament_fb/locations/templates/locations/location-log.html
+++ b/datafundament_fb/locations/templates/locations/location-log.html
@@ -21,7 +21,7 @@
 {% if location %}
 <h2>Log van {{ location.pandcode }} - {{ location.name }}</h2>
 {% else %}
-<h2>Applicatie logboek</h2>
+<h2>Datafundament logboek</h2>
 {% endif %}
 <div class="page-content">
     <table class="table-adam">
