--- a/datafundament_fb/locations/templates/locations/location-admin.html
+++ b/datafundament_fb/locations/templates/locations/location-admin.html
@@ -88,7 +88,7 @@
             </span>
             Logs
         </a>
-        | Voor het bekijken van locatie en applicatie wijzigingen.
+        | Voor het bekijken van locatie en datafundament wijzigingen.
     </li>
 </ul>
 {% endblock %}
