in csv use pipe as delimiter for fields with multiple values

--- a/datafundament_fb/locations/templates/locations/location-import.html
+++ b/datafundament_fb/locations/templates/locations/location-import.html
@@ -28,8 +28,8 @@
     Importeer locaties uit een CSV bronbestand. Let hierbij op het volgende:<br>
 <ul>
     <li>De kolomnamen moeten gelijk zijn aan de korte namen in de database</li>
-    <li>Kolommen moeten gescheiden zijn door een komma ','</li>
-    <li>Nieuwe waardes voor keuzelijstje worden automatisch toegevoegd</li>
+    <li>Kolommen moeten gescheiden zijn door een punt-komma ';'</li>
+    <li>In cellen met meervoudige waardes moeten deze gescheiden zijn door een sluisteken '|'</li>
 </ul>
 </p>
 <form action="." method="POST" enctype="multipart/form-data" novalidate>
