--- a/datafundament_fb/locations/templates/locations/location-export.html
+++ b/datafundament_fb/locations/templates/locations/location-export.html
@@ -6,13 +6,13 @@
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-    <a href="{% url 'locations_urls:location-list' %}">Home</a>
+    <a href="/">Home</a>
     {% if user.is_authenticated %}
     <span>&rsaquo;</span>
     <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
     {% endif %}
     <span>&rsaquo;</span>
-    {% translate 'Export Locaties' %}
+    {% translate 'Locaties exporteren' %}
 </div>
 {% endblock %}
 
